# Buzz

./: README.md
application/: Cargo.toml  package-lock.json  package.json
application/src/: input.rs  main.rs  ui.rs
application/src-tauri/: tauri.conf.json
server/: Cargo.toml
server/src/: lib.rs  main.rs
