[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = "0.27.0"
tokio = {version = "1.39.2", features = ["full"]}
tokio-util = {version = "0.7.11", features = ["full"]}
